Limit the maximum percentage of container memory used by the JVM via -XX:MaxRAMPercentage